--- a/KalonLoader.Core/KalonLoader.Core.vcxproj.filters
+++ b/KalonLoader.Core/KalonLoader.Core.vcxproj.filters
@@ -18,6 +18,12 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Libs\FileIO.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Libs\Console.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Libs\Console.h">
@@ -26,20 +32,5 @@
     <ClInclude Include="Libs\FileIO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Config.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Libs\QuickDllProxy\DllProxy.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Libs\QuickDllProxy\DllProxyImpl.inl">
-      <Filter>Header Files</Filter>
-    </None>
-    <None Include="winhttp_exports.inc">
-      <Filter>Header Files</Filter>
-    </None>
-    <None Include="Libs\QuickDllProxy\README.md" />
   </ItemGroup>
 </Project>
