--- a/KalonLoader.Core/KalonLoader.Core.vcxproj
+++ b/KalonLoader.Core/KalonLoader.Core.vcxproj
@@ -108,7 +108,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;KALONLOADERCORE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;KALONLOADERCORE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS;KOLAN_EXPORTS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
@@ -127,7 +127,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;KALONLOADERCORE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;KALONLOADERCORE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS;KOLAN_EXPORTS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
@@ -146,10 +146,26 @@
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="Libs\Console.cpp" />
     <ClCompile Include="Libs\FileIO.cpp" />
+    <ClCompile Include="Libs\minhook\buffer.c" />
+    <ClCompile Include="Libs\minhook\hde\hde32.c" />
+    <ClCompile Include="Libs\minhook\hde\hde64.c" />
+    <ClCompile Include="Libs\minhook\hook.c" />
+    <ClCompile Include="Libs\minhook\trampoline.c" />
+    <ClCompile Include="Libs\NativeCore.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Libs\Console.h" />
     <ClInclude Include="Libs\FileIO.h" />
+    <ClInclude Include="Libs\minhook\buffer.h" />
+    <ClInclude Include="Libs\minhook\hde\hde32.h" />
+    <ClInclude Include="Libs\minhook\hde\hde64.h" />
+    <ClInclude Include="Libs\minhook\hde\pstdint.h" />
+    <ClInclude Include="Libs\minhook\hde\table32.h" />
+    <ClInclude Include="Libs\minhook\hde\table64.h" />
+    <ClInclude Include="Libs\minhook\minhook.h" />
+    <ClInclude Include="Libs\minhook\trampoline.h" />
+    <ClInclude Include="Libs\NativeCore.h" />
+    <ClInclude Include="Libs\_NativeCore.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
