--- a/KalonLoader/KalonLoader.vcxproj
+++ b/KalonLoader/KalonLoader.vcxproj
@@ -157,8 +157,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Config.h" />
-    <ClInclude Include="Libs\Console.h" />
-    <ClInclude Include="Libs\FileIO.h" />
+    <ClInclude Include="Libs\KalonLoader\Console.h" />
+    <ClInclude Include="Libs\KalonLoader\FileIO.h" />
     <ClInclude Include="Libs\QuickDllProxy\DllProxy.h" />
   </ItemGroup>
   <ItemGroup>
