fixed build im 2 lazy to work on this

--- a/KalonLoader/KalonLoader.vcxproj.filters
+++ b/KalonLoader/KalonLoader.vcxproj.filters
@@ -18,12 +18,30 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\KalonLoader.Core\Libs\Console.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\KalonLoader.Core\Libs\FileIO.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Libs\KalonLoader\Console.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Libs\KalonLoader\FileIO.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Libs\QuickDllProxy\DllProxy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\KalonLoader.Core\Libs\Console.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\KalonLoader.Core\Libs\FileIO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Libs\KalonLoader\Console.h">
