--- a/KalonLoader/KalonLoader.vcxproj
+++ b/KalonLoader/KalonLoader.vcxproj
@@ -110,7 +110,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;KALONLOADER_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;KALONLOADER_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS;KOLAN_EXPORTS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
@@ -133,7 +133,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;KALONLOADER_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;KALONLOADER_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS;KOLAN_EXPORTS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
@@ -153,9 +153,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\KalonLoader.Core\Libs\Console.cpp" />
+    <ClCompile Include="..\KalonLoader.Core\Libs\FileIO.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="Libs\KalonLoader\Console.cpp" />
+    <ClCompile Include="Libs\KalonLoader\FileIO.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\KalonLoader.Core\Libs\Console.h" />
+    <ClInclude Include="..\KalonLoader.Core\Libs\FileIO.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="Libs\KalonLoader\Console.h" />
     <ClInclude Include="Libs\KalonLoader\FileIO.h" />
