kolan now supports preview & whatever custom minecraft msix/appx's you make/install

--- a/KalonLoader/KalonLoader.vcxproj
+++ b/KalonLoader/KalonLoader.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="Libs\KalonLoader\Console.h" />
     <ClInclude Include="Libs\KalonLoader\FileIO.h" />
     <ClInclude Include="Libs\QuickDllProxy\DllProxy.h" />
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Libs\QuickDllProxy\DllProxyImpl.inl" />
