--- a/KalonLoader/KalonLoader.vcxproj.filters
+++ b/KalonLoader/KalonLoader.vcxproj.filters
@@ -86,6 +86,12 @@
     <ClInclude Include="Libs\minhook\trampoline.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LoadScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Libs\stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Libs\QuickDllProxy\DllProxyImpl.inl">
