loadscreen is larger with dwm round & shadow styles moved some functions into new classes

--- a/KalonLoader/KalonLoader.vcxproj.filters
+++ b/KalonLoader/KalonLoader.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClCompile Include="LoadScreen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Libs\KalonLoader\GameConfig.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Libs\KalonLoader\SystemConfig.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Config.h">
@@ -93,6 +99,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Libs\stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\BitmapUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Libs\KalonLoader\GameConfig.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Libs\KalonLoader\SystemConfig.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
