--- a/KalonLoader/KalonLoader.vcxproj
+++ b/KalonLoader/KalonLoader.vcxproj
@@ -156,7 +156,9 @@
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="Libs\KalonLoader\Console.cpp" />
     <ClCompile Include="Libs\KalonLoader\FileIO.cpp" />
+    <ClCompile Include="Libs\KalonLoader\GameConfig.cpp" />
     <ClCompile Include="Libs\KalonLoader\NativeCore.cpp" />
+    <ClCompile Include="Libs\KalonLoader\SystemConfig.cpp" />
     <ClCompile Include="Libs\minhook\buffer.c" />
     <ClCompile Include="Libs\minhook\hde\hde32.c" />
     <ClCompile Include="Libs\minhook\hde\hde64.c" />
@@ -168,7 +170,9 @@
     <ClInclude Include="Config.h" />
     <ClInclude Include="Libs\KalonLoader\Console.h" />
     <ClInclude Include="Libs\KalonLoader\FileIO.h" />
+    <ClInclude Include="Libs\KalonLoader\GameConfig.h" />
     <ClInclude Include="Libs\KalonLoader\NativeCore.h" />
+    <ClInclude Include="Libs\KalonLoader\SystemConfig.h" />
     <ClInclude Include="Libs\minhook\buffer.h" />
     <ClInclude Include="Libs\minhook\hde\hde32.h" />
     <ClInclude Include="Libs\minhook\hde\hde64.h" />
@@ -181,6 +185,7 @@
     <ClInclude Include="Libs\stb_image.h" />
     <ClInclude Include="LoadScreen.h" />
     <ClInclude Include="Utils.h" />
+    <ClInclude Include="Utils\BitmapUtils.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Libs\QuickDllProxy\DllProxyImpl.inl" />
